--- a/HW1-Prompt Engineering/main.ipynb
+++ b/HW1-Prompt Engineering/main.ipynb
@@ -19,6 +19,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install sentence-transformers"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -335,6 +344,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "改進版"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -350,12 +366,16 @@
     "from langchain.output_parsers import RegexParser\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
     "\n",
+    "# 設置 Google API Key\n",
     "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyDAI6yk07b0ocssMsy4o2AM3RdSWnHqf_M\"\n",
     "\n",
+    "# 讀取 CSV 檔案\n",
     "sample_df = pd.read_csv(\"mmlu_sample.csv\", sep=\",\")  # 訓練集\n",
     "submit_df = pd.read_csv(\"mmlu_submit.csv\", sep=\",\")  # 測試集\n",
     "\n",
+    "# Few-shot 範例數量\n",
     "few_shot_count = 5\n",
     "\n",
     "# 定義題目類型特定的策略\n",
@@ -373,37 +393,43 @@
     "}\n",
     "\n",
     "role_dict = {\n",
-    "    \"high_school_biology\": \"a high school biology teacher\",\n",
-    "    \"high_school_computer_science\": \"a computer science professor\",\n",
-    "    \"high_school_european_history\": \"a European history expert\",\n",
-    "    \"high_school_geography\": \"a geography educator\",\n",
-    "    \"high_school_government_and_politics\": \"a political science scholar\",\n",
-    "    \"high_school_macroeconomics\": \"a macroeconomics professor\",\n",
-    "    \"high_school_microeconomics\": \"a microeconomics professor\",\n",
-    "    \"high_school_psychology\": \"a psychology instructor\",\n",
-    "    \"high_school_us_history\": \"a U.S. history expert\",\n",
-    "    \"high_school_world_history\": \"a world history specialist\"\n",
+    "    \"high_school_biology\": \"a biology professor specializing in high school curricula\",\n",
+    "    \"high_school_computer_science\": \"a computer science professor with expertise in programming logic\",\n",
+    "    \"high_school_european_history\": \"a European history expert focused on high school education\",\n",
+    "    \"high_school_geography\": \"a geography educator specializing in spatial analysis\",\n",
+    "    \"high_school_government_and_politics\": \"a political science scholar with knowledge of governmental systems\",\n",
+    "    \"high_school_macroeconomics\": \"a macroeconomics professor specializing in economic policy\",\n",
+    "    \"high_school_microeconomics\": \"a microeconomics professor focused on market dynamics\",\n",
+    "    \"high_school_psychology\": \"a psychology instructor with expertise in behavioral theories\",\n",
+    "    \"high_school_us_history\": \"a U.S. history expert specializing in key events and trends\",\n",
+    "    \"high_school_world_history\": \"a world history specialist focused on global trends\"\n",
     "}\n",
     "\n",
+    "# 建立優化版 PromptTemplate\n",
     "prompt_template = PromptTemplate(\n",
     "    template=\"\"\"\n",
     "You are {role} specializing in solving multiple-choice questions with high accuracy. The current question is from {task}.\n",
     "\n",
     "🔹 **Rules**:\n",
     "1. Output only the final answer in this exact format: 'Correct answer: X' (where X is A, B, C, or D).\n",
-    "2. Include only the output, avoiding reasoning, justifications, or additional text.\n",
-    "3. Think step-by-step internally:\n",
-    "   - Step 1: Identify the core concept or fact the question is testing.\n",
-    "   - Step 2: For each option, assess its alignment with the core concept.\n",
-    "   - Step 3: Eliminate options that contradict or misinterpret the concept, considering why they might be incorrect.\n",
-    "   - Step 4: Check for potential trickery or common misconceptions in the options.\n",
-    "   - Step 5: Confirm the remaining option by ensuring it directly answers the question.\n",
-    "4. Use these strategies for {task} questions: {task_strategy}.\n",
-    "5. Pay attention to subtle differences between options to avoid falling for distractors.\n",
-    "6. Double-check your conclusion by revisiting the question and options to ensure accuracy.\n",
+    "2. Include only the output, avoiding reasoning or additional text.\n",
     "\n",
-    "📌 **Examples:**\n",
-    "These examples are selected to provide context and illustrate common patterns in {task} questions:\n",
+    "🔹 **Instructions**:\n",
+    "Solve the question by reasoning step-by-step:\n",
+    "1. Identify the core concept or fact the question is testing.\n",
+    "2. Analyze each option:\n",
+    "   - Assess its alignment with the core concept.\n",
+    "   - Note why it might be correct or incorrect.\n",
+    "3. Eliminate incorrect options:\n",
+    "   - Identify flaws (e.g., factual errors, misinterpretations).\n",
+    "   - Watch for traps (e.g., subtle wording differences).\n",
+    "4. Confirm the answer:\n",
+    "   - Ensure the remaining option fully answers the question.\n",
+    "\n",
+    "🔹 **Strategy**:\n",
+    "Use these strategies for {task} questions: {task_strategy}.\n",
+    "\n",
+    "📌 **Examples**:\n",
     "{few_shot}\n",
     "\n",
     "Now solve this question:\n",
@@ -417,38 +443,54 @@
     "    input_variables=[\"role\", \"task\", \"task_strategy\", \"few_shot\", \"question\", \"A\", \"B\", \"C\", \"D\"]\n",
     ")\n",
     "\n",
+    "# 初始化 LLM\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-2.0-flash\", temperature=0.1)  \n",
     "chain = prompt_template | llm \n",
     "output_parser = RegexParser(regex=r\"Correct answer: ([A-D])\", output_keys=[\"target\"])\n",
     "\n",
+    "# 定義一個函數來提取答案\n",
     "def extract_answer(response):\n",
     "    patterns = [\n",
     "        r\"Correct answer:\\s*([A-D])\",\n",
     "        r\"Answer:\\s*([A-D])\",\n",
     "        r\"The correct option is\\s*([A-D])\",\n",
     "        r\"I choose\\s*([A-D])\",\n",
-    "        r\"Final answer:\\s*([A-D])\"\n",
+    "        r\"Final answer:\\s*([A-D])\",\n",
+    "        r\"Option\\s*([A-D])\\s*is correct\",\n",
+    "        r\"The answer is\\s*([A-D])\",\n",
+    "        r\"([A-D])\\s*is the correct choice\"\n",
     "    ]\n",
     "    for pattern in patterns:\n",
     "        match = re.search(pattern, response, re.IGNORECASE)\n",
     "        if match:\n",
     "            return match.group(1).upper()\n",
-    "    lines = response.strip().split('\\n')\n",
-    "    last_line = lines[-1].strip()\n",
+    "    # 檢查最後一行是否有關鍵詞\n",
+    "    last_line = response.split('\\n')[-1].strip()\n",
     "    match = re.search(r\"[A-D]\", last_line)\n",
     "    if match:\n",
     "        return match.group(0).upper()\n",
+    "    # 若仍無匹配，隨機選擇（但這是最後手段）\n",
     "    return random.choice([\"A\", \"B\", \"C\", \"D\"])\n",
     "\n",
-    "def get_similar_examples(question, task_examples, n=4):\n",
-    "    vectorizer = TfidfVectorizer()\n",
-    "    task_texts = task_examples[\"input\"].tolist()\n",
-    "    all_texts = [question] + task_texts\n",
-    "    tfidf_matrix = vectorizer.fit_transform(all_texts)\n",
-    "    similarities = cosine_similarity(tfidf_matrix[0:1], tfidf_matrix[1:])[0]\n",
-    "    top_indices = similarities.argsort()[-n:][::-1]\n",
+    "# def get_similar_examples(question, task_examples, n=4):   #TF-IDF\n",
+    "#     vectorizer = TfidfVectorizer()\n",
+    "#     task_texts = task_examples[\"input\"].tolist()\n",
+    "#     all_texts = [question] + task_texts\n",
+    "#     tfidf_matrix = vectorizer.fit_transform(all_texts)\n",
+    "#     similarities = cosine_similarity(tfidf_matrix[0:1], tfidf_matrix[1:])[0]\n",
+    "#     top_indices = similarities.argsort()[-n:][::-1]\n",
+    "#     return task_examples.iloc[top_indices]\n",
+    "\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')   #Sentence-BERT\n",
+    "\n",
+    "def get_similar_examples(question, task_examples, n=3):\n",
+    "    question_embedding = model.encode(question)\n",
+    "    example_embeddings = model.encode(task_examples[\"input\"].tolist())\n",
+    "    similarities = util.pytorch_cos_sim(question_embedding, example_embeddings)[0]\n",
+    "    top_indices = similarities.argsort(descending=True)[:n]\n",
     "    return task_examples.iloc[top_indices]\n",
     "\n",
+    "# 主程式碼\n",
     "predictions = []\n",
     "errors = []\n",
     "count_requests = 0\n",
@@ -458,13 +500,9 @@
     "    # 根據當前題目的 task 動態挑選 Few-shot 範例\n",
     "    task = row[\"task\"]\n",
     "    task_examples = sample_df[sample_df[\"task\"] == task]\n",
-    "    \n",
-    "    # 2 個相似範例 + 3 個隨機範例\n",
-    "    similar_examples = get_similar_examples(row[\"input\"], task_examples, 2)\n",
-    "    random_examples = task_examples.sample(min(3, len(task_examples)), random_state=42)\n",
+    "    similar_examples = get_similar_examples(row[\"input\"], task_examples, 3)\n",
+    "    random_examples = task_examples.sample(min(2, len(task_examples)), random_state=42)\n",
     "    few_shot_examples = pd.concat([similar_examples, random_examples]).drop_duplicates()\n",
-    "    \n",
-    "    # 直接從 task_examples 中隨機選取當作範例\n",
     "    # few_shot_examples = task_examples.sample(min(few_shot_count, len(task_examples)), random_state=42)\n",
     "    \n",
     "    few_shot_text = \"\\n\".join([\n",
@@ -480,13 +518,11 @@
     "    # 動態選擇 task 對應的策略和角色\n",
     "    task_strategy = category_strategies.get(\n",
     "        task,\n",
-    "        \"Implement a comprehensive strategy that leverages detailed domain expertise and rigorous logical reasoning.\"\n",
+    "        \"Implement a comprehensive strategy that leverages detailed domain expertise and rigorous logical reasoning...\"\n",
     "    )\n",
-    "    role = role_dict.get(\n",
-    "        task,\n",
-    "        \"a seasoned expert with extensive domain-specific knowledge and analytical skills\"\n",
-    "    )\n",
+    "    role = role_dict.get(task, \"a seasoned expert with extensive domain-specific knowledge\")\n",
     "\n",
+    "    # 準備輸入數據\n",
     "    question_data = {\n",
     "        \"role\": role,\n",
     "        \"task\": task,\n",
@@ -499,7 +535,10 @@
     "        \"D\": row[\"D\"]\n",
     "    }\n",
     "\n",
+    "    # 呼叫 LLM 產生回答\n",
     "    response = chain.invoke(question_data).content\n",
+    "    \n",
+    "    # 提取答案\n",
     "    predicted_option = extract_answer(response)\n",
     "    \n",
     "    if predicted_option in [\"A\", \"B\", \"C\", \"D\"]:\n",
@@ -510,7 +549,7 @@
     "            \"ID\": row[\"Unnamed: 0\"],\n",
     "            \"input\": row[\"input\"],\n",
     "            \"response\": response,\n",
-    "            \"reason\": \"無法解析\"\n",
+    "            \"reason\": \"無法解析答案\"\n",
     "        })\n",
     "        predictions.append({\"ID\": row[\"Unnamed: 0\"], \"target\": predicted_option})\n",
     "    \n",
@@ -521,8 +560,14 @@
     "        print(f\"Reached the daily limit of {daily_limit} requests. Stopping...\")\n",
     "        break\n",
     "\n",
+    "# 儲存輸出\n",
     "output_df = pd.DataFrame(predictions)\n",
     "output_df.to_csv(\"submit_format.csv\", index=False)\n",
+    "\n",
+    "if errors:\n",
+    "    error_df = pd.DataFrame(errors)\n",
+    "    error_df.to_csv(\"errors.csv\", index=False)\n",
+    "    print(f\"Some questions were incomplete or had issues. Check 'errors.csv' for details.\")\n",
     "\n",
     "print(\"Results saved to submit_format.csv\")"
    ]
